--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,61 @@
+styles
+/*Change what the Major Headings look like */
+h1 {
+    color: #d54d7b;  
+    font-size: 165px; 
+    line-height: 160px; 
+    font-weight: normal; 
+    margin-bottom: 0px; 
+    margin-top: 40px; 
+    text-align: center; 
+    text-shadow: 0 1px 1px #fff;
+ }
+ /*Change what the Minor Headings look like */
+h2 {
+   
+ }
+ /*Change what the Paragraph Text look like */
+ p {
+    
+  }
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-.container {
-  grid-template-columns: 1fr 1fr 1fr;
-}
+    background-color: #333;
+    overflow: hidden;
+  }
   
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+ 
+  /*Style the grid*/
+  .grid{
+    display:grid;
+    grid-template-columns: 33% 33% 34%;
+    }
+    .grid >div{
+    background:#eee;
+    padding:1em;
+    }
+    /*makes every other grid box a differnt color*/
+    .grid > div:neth-child(odd){
+    background:#ddd;
+    }
