--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ styles
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: $purple-700;
+    background-color: $6f42c1;
     overflow: hidden;
   }
   
